--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -4,28 +4,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:padding="16dp">
+    
+    android:minHeight="@dimen/list_item_height">
     <ImageView
         android:id="@+id/icon_image_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/number_one"/>
+        android:layout_width="@dimen/list_item_height"
+        android:layout_height="@dimen/list_item_height"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingLeft="16dp">
+        android:paddingLeft="16dp"
+        android:background="@color/category_numbers">
     <TextView
         android:id="@+id/miwok_text_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="lutti"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="bottom"
+        tools:text="lutti"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"/>
     <TextView
         android:id="@+id/default_text_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="one"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        tools:text="one"
+        android:gravity="top"
+        android:textColor="#FFFFFF"/>
     </LinearLayout>
 
 
